fixup readme